# logsentinel-sdk

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/logsentinel_sdk/: __init__.py  logger.py  sentinel_id.py
tests/: conftest.py
tests/unit/: test_logger.py  test_sentinel_id.py
