[tool.poetry]
name = "logsentinel-sdk"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = true
packages = [
    {include = "logsentinel_sdk", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
boto3 = "^1.42.61"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "moto[dynamodb,kinesis,s3,sqs,ssm] (>=5.1.21,<6.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.15.4,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
[tool.pytest.ini_options]
testpaths =["tests"]
pythonpath =["src"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "^0.15.4"
mypy = "^1.19.1"

[tool.poetry.scripts]
logsentinel = "logsentinel.cli:app"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true